# ai-expensify

./: .dockerignore  .env.example  .gitignore  COST_OPTIMIZATION.md  Dockerfile  README.md  api_tests.http  pyproject.toml  test_invoice.py  test_problematic_invoice.py
.github/workflows/: docker-build.yml
app/: __init__.py  config.py  constants.py  main.py
app/models/: __init__.py  cost_tracking.py  fallback.py  invoice.py  response.py
app/prompts/: __init__.py  categorization.py  extraction.py  summary.py  validation.py
app/services/: __init__.py  alternative_llm_service.py  categorizer.py  llm_service.py  ocr_service.py  processing_orchestrator.py  textract_service.py  validator.py
app/utils/: helpers.py
tests/: __init__.py  test_api.py
